--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
 </li>
 </ul>
+
+<h5>練習問題2.6</h5>
+<!DOCTYPE html>
+<html lang-"ja">
+ <head>
+  <meta charset="utf-8">
+  <title>練習問題2.6</title>
+ </head>
+ <body>
+  <p>テキスト入力:<input type="text"></p>
+ </body>
+ </html>
  
 </body>
  
