--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </tbody>
 </table>
 <table>
-<capion>
+<caption>
 <strong>お寿司をどこで食べるか？その長所と短所</strong>
 </capion>
 <thead>
@@ -106,6 +106,7 @@
 </ul>
 
 <h1>練習問題2.6</h1>
+
 <!DOCTYPE html>
 <html lang-"ja">
 <head>
@@ -117,6 +118,12 @@
 </body>
 </html>
  
+<h1>練習問題2.7</h1>
+ 
+<form action="xxx.php" method="post"><label>メール(
+tyoe="email"):<input type="email"
+                     name="email"></label><input type="submit"value="送信"></form>
+<form action="xxx.php" method="post"><label>URL(type="
 </body>
  
  
