--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 <form action="xxx.php" method="post"><label>メール(
 tyoe="email"):<input type="email"
                      name="email"></label><input type="submit"value="送信"></form>
-<form action="xxx.php" method="post"><label>URL(type="
+<form action="xxx.php" method="post"><label>URL(type="url"):<input  type="url"name="url"><label><input type="submit"value="送信"></form>
+
 </body>
  
  
