--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
 <form action="xxx.php"method="post"><label>数値(type="number"):<input type="number"name="number"></label><input type="submit"value="送信"></form>
 <form action="xxx.php"method="post"><label>日付(type="date"):<input type="date"name="date"><label><input type="submit"value="送信"></form>
 <form action="xxx.php"method="post"><label>ローカル日時(type="datetime-local"):<input type="datetime-local"name="datetime-local"></label><input type="submit"value="送信"></form>
-</body>
+ <form action="xxx.php"method="post"><label>月(type="month"):<input type="month"name="month></label><input type="submit"value="送信"></form>
+ 
+ </body>
  
  
  
