--- a/index.html
+++ b/index.html
@@ -164,6 +164,15 @@
  <a href="mailto:zm99999@josai.ac.jp">自分宛メール(自分のメールアドレスを入力)</a><br>
  <a href="https://www.josai.ac.jp/education/management/index.html/"><img src="./image/keiei_small/jpg"alt="城西大学ホームページ></a>
  
+ <h1>練習問題3.2</h1>
+ <a href="a.html"target="_black">別画面を開いてリンクします</a><br>
+ <a href="a.html"target="_self">リンク元と同じフレームにリンクします</a><br>
+ <a href="a.html"target="_parent">ひとつ上の親フレームにリンクします</a><br>
+ <a href="a.html"target="_top">フレームをすべて解除してリンクします</a><br>
+ <a href="a.html"target="_abc">abcという名前のフレームにリンクします</a><br>
+ 
+ <h1>練習問題3.3</h1>
+ 
  
  </body>
  
