--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p>以下のテーブルでは、2番目のカラムに寿司店のタイプが入れられ
  ています。その左側にそのようなタイプのお店でお寿司を食べる場合
  の長所が、右側に短所が入れられています。</p>
-</datails>
+</details>
 </caption>
 <thead>
 <tbody>
