--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </body>
 </html>
  
-<h1>練習問題2.7</h1>
+<h1>練習問題2.7</h1>4
  
 <form action="xxx.php"method="post"><label>メール(tyoe="email"):<input type="email"name="email"></label><input type="submit"value="送信"></form>
 <form action="xxx.php"method="post"><label>URL(type="url"):<input type="url"name="url"><label><input type="submit"value="送信"></form>
