--- a/index.html
+++ b/index.html
@@ -175,7 +175,15 @@
  
 
 <h1>練習問題3.3</h1>
-
+ <li>ほにゃらら</li>
+ </ol>
+<a id="abc">ここがabcの場所</a>
+ <dl>
+  <dt>作者</dt>
+<body>
+ <p>アンカータグの練習です。</p>
+ <a id="def>ここがdefの場所</a>
+        
  
  
 <h1>練習問題3.4</h1>
