--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
  
  
 <h1>練習問題3.4</h1>
- <aside class=“ad”
+ <aside class="ad"
  <h1>広報</h1>
- <a href=“https://www.josai.ac.jp/club/jyosisofuto.html”>
+ <a href="https://www.josai.ac.jp/club/jyosisofuto.html">
  <section>
  <h1>城西大学　女子ソフトボール部</h1>
  <p>女子ソフトボール部＜全日本総合女子ソフトボール選手権大会出場決定！＞
  </p>
  </section></a>
  
- <a href=“https://www.josai.ac.jp/news/20200615-04.html”>
+ <a href="https://www.josai.ac.jp/news/20200615-04.html">
  <section>
  <h1>城西大学　JOSAI SPORTS FEILD</h1>
  <p>JOSAI SPORTS FIELD 建設・設備が進んでいます【城西大学　坂戸キャンパス】
@@ -212,8 +212,8 @@
 <h1>練習問題3.5</h1>
  <nav>
  <ul>
- <li><a href=“https://www.josai.ac.jp/club/jyosisofuto.html”>女子ソフトボール部</a></li>
- <li><a href=“https://www.josai.ac.jp/club/ekiden_hakone.html”>男子駅伝部</a></li>
+ <li><a href="https://www.josai.ac.jp/club/jyosisofuto.html">女子ソフトボール部</a></li>
+ <li><a href="https://www.josai.ac.jp/club/ekiden_hakone.html">男子駅伝部</a></li>
  <li><a>クラブ・サークル活動</a></li>
  </ul>
  </nav>
